Fixed issue with table overflowing

--- a/sass/theme/content.scss
+++ b/sass/theme/content.scss
@@ -42,6 +42,10 @@
     padding-top: 1.5rem;
   }
 
+  table {
+    width: 100%;
+  }
+
   .wp-video {
     width: 100% !important;
   }
